# tauri-wasm-demo

./: Cargo.toml
plugin/: Cargo.toml
plugin/src/: lib.rs
pure-rust/: Cargo.toml
pure-rust/src/: main.rs
tauri-demo/: package.json
tauri-demo/src-tauri/: Cargo.toml  tauri.conf.json
tauri-demo/src-tauri/src/: main.rs
tauri-main/src-tauri/: Cargo.toml  tauri.conf.json
tauri-main/src-tauri/src/: main.rs
